# tutorial-auditing-the-info-environment

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/fact_checks/: 2024-10-10_factchecks_cleaned.parquet
docs/: PLAN.md  PROGRESS.md
docs/plans/: 00_overview.md  01_guardian_news.md  02_mcq_generation.md  03_llm_judge.md  04_answering_methods.md  05_horse_race_site.md
docs/specs/: 00_shared_infrastructure.md  01_politi_fact_checking.md  02_google_news_scraper.md  03_question_generation.md  04_real_time_pipeline.md  05_multi_agent_debate.md
notebooks/: 01_guardian_news_collection.ipynb  01_politi_fact_checking.ipynb  02_google_news_scraper.ipynb  02_question_generation.ipynb  03_llm_judge.ipynb  03_question_generation.ipynb  04_real_time_pipeline.ipynb  05_multi_agent_debate.ipynb
scripts/: 01_collect_guardian_news.py  02_generate_questions.py  03-1_generate_judgments.py  03-2_combine_judgments.py  03-3_select_questions.py  collect_guardian_news.py  mad-agents-fact-checking.py
toolkit/: pyproject.toml
toolkit/toolkit/: __init__.py  config.py  guardian.py  io.py  judgments.py  metrics.py  playwright_helper.py  prompts.py  questions.py  string_helpers.py  text.py  utils.py
toolkit/toolkit/providers/: __init__.py  _keys.py  gemini_provider.py  openai_provider.py
