[project]
name = "tutorial-auditing-the-info-environment"
version = "0.2.0"
description = "Hands-on workshop: auditing the information environment — Guardian news scraping, LLM question generation, LLM-as-judge, and a human-vs-LLM horse race"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toolkit",
    "requests",
    "tenacity",
    "openai>=2.0.0",
    # Official Gemini SDK (replaces the deprecated google-generativeai)
    "google-genai>=1.0.0",
    # Official OpenRouter SDK — latest published series is 0.11.x (no 1.0 yet)
    "openrouter>=0.11.0",
    "pydantic>=2.6.0",
    "pandas",
    "tldextract",
    "typing_extensions",
    "ipykernel",
    "notebook",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["toolkit"]

[tool.uv.sources]
toolkit = { workspace = true }
